update model selection chapter

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,210 @@
+@article{Fan:1992vx,
+    author = {Fan, T. H. and Berger, J. O.},
+    title = {Behavior of the posterior distribution and inferences for a
+        normal mean with t prior distributions},
+    journal = {Statistics and Decisions},
+    volume = {10},
+    pages = {99--120},
+    year = {1992}
+}
+
+@article{OHagan:1990vx,
+    author = {O'Hagan, A.},
+    title = {Outliers and Credence for Location Parameter Inference},
+    journal = {Journal of the American Statistical Association},
+    volume = {85},
+    number = {409},
+    pages = {172--176},
+    year = {1990}
+}
+
+@article{Tierney:1986vx,
+    author = {Tierney, Luke and Kadane, Joseph B.},
+    title = {Accurate Approximations for Posterior Moments and Marginal Densities},
+    journal = {Journal of the American Statistical Association},
+    volume = {81},
+    number = {393},
+    pages = {82-86},
+    year = {1986}
+}
+
+@incollection{Clyde:1999vx,
+    title={Bayesian model averaging and model search strategies},
+    author={Clyde, M.},
+    booktitle={Bayesian Statistics 6},
+    pages={157--185},
+    year={1999},
+    publisher = {Oxford University Press}
+}
+
+@article{Raftery:1997vx,
+    author = {Raftery, Adrian E. and Madigan, David and Hoeting, Jennifer A.},
+    title = {Bayesian Model Averaging for Linear Regression Models},
+    journal = {Journal of the American Statistical Association},
+    volume = {92},
+    number = {437},
+    pages = {179-191},
+    year = {1997}
+}
+
+@article{Draper:1995vx,
+    title = {Assessment and Propagation of Model Uncertainty},
+    author = {Draper, David},
+    journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+    volume = {57},
+    number = {1},
+    pages = {45--97},
+    year = {1995}
+}
+
+@article{Allen:1974vx,
+    author = {Allen, David M.},
+    title = {The Relationship Between Variable Selection and Data Agumentation
+        and a Method for Prediction},
+    journal = {Technometrics},
+    volume = {16},
+    number = {1},
+    pages = {125--127},
+    year = {1974}
+}
+
+@article{Shao:1997vx,
+    title={An asymptotic theory for linear model selection},
+    author={Shao, Jun},
+    journal={Statistica Sinica},
+    volume={7},
+    number={2},
+    pages={221--242},
+    year={1997}
+}
+@article{Breiman:1996vx,
+    author = {Leo Breiman},
+    title = {{Heuristics of instability and stabilization in model selection.}},
+    journal = {Annal of Statistics},
+    volume = {24},
+    number = {6},
+    pages = {2350--2383},
+    year = {1996}
+}
+
+@article{Breiman:1992vx,
+    title = {Submodel Selection and Evaluation in Regression. The X-Random Case},
+    author = {Breiman, Leo and Spector, Philip},
+    journal = {International Statistical Review},
+    volume = {60},
+    number = {3},
+    pages = {291--319},
+    year = {1992}
+}
+
+@article{Burman:1989vx,
+    author = {Burman, Prabir},
+    title = {A comparative study of ordinary cross-validation, v-fold
+        cross-validation and the repeated learning-testing methods},
+    volume = {76},
+    number = {3},
+    pages = {503--514},
+    year = {1989},
+    journal = {Biometrika}
+}
+
+@book{Hjorth:1994vx,
+    title = {{Computer Intensive Statistical Methods: Validation Model Selection
+        and Bootstrap}},
+    author={Hjorth, U.},
+    year={1994},
+    publisher={Chapman \& Hall}
+}
+
+@article{Stone:1978vx,
+    author = {Stone, M.},
+    title = {Cross-validation: A review},
+    journal = {Series Statistics},
+    volume = {9},
+    number = {1},
+    pages = {127--139},
+    year = {1978}
+}
+
+@article{Shao:1993vx,
+    author = {Shao, Jun},
+    title = {Linear Model Selection by Cross-validation},
+    journal = {Journal of the American Statistical Association},
+    volume = {88},
+    number = {422},
+    pages = {486--494},
+    year = {1993}
+}
+
+@article{Yang:2007vx,
+    author = {Yuhong Yang},
+    title = {{Consistency of cross validation for comparing regression
+        procedures.}},
+    journal = {{Annal of Statistics}},
+    volume = {35},
+    number = {6},
+    pages = {2450--2473},
+    year = {2007}
+}
+
+@article{Geisser:1975vx,
+    title = {The Predictive Sample Reuse Method with Applications},
+    author = {Geisser, Seymour},
+    journal = {Journal of the American Statistical Association},
+    volume = {70},
+    number = {350},
+    pages = {pp. 320-328},
+    year = {1975}
+}
+
+@article{Stone:1977vx,
+    title = {An Asymptotic Equivalence of Choice of Model by Cross-Validation
+        and Akaike's Criterion},
+    author = {Stone, M.},
+    journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+    volume = {39},
+    number = {1},
+    pages = {44--47},
+    year = {1977}
+}
+
+@article{Stone:1974vx,
+    title = {Cross-Validatory Choice and Assessment of Statistical Predictions},
+    author = {Stone, M.},
+    journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+    volume = {36},
+    number = {2},
+    pages = {111--147},
+    year = {1974}
+}
+
+@book{Lehmann:1983vx,
+    author = {Lehmann, E. L.},
+    title = {{Theory of point estimation}},
+    publisher = {John Wiley and Sons},
+    year = {1983},
+    address = {New York, USA}
+}
+
+@article{Takeuchi:1976vx,
+    title = {Distribution of informational statistics and a criterion of model
+        fitting},
+    journal = {Suri-Kagaku (Mathematical Sciences)},
+    issue = {153},
+    pages = {12--18},
+    author = {Takeuchi, K},
+    language = {Japanese},
+    year = {1976}
+}
+
+@book{Cover:1991vx,
+    title = {Elements of Inforamtion Theory},
+    author = {Cover, T. M. and Thomas, J. A.},
+    year = {1991},
+    publisher = {John Wiley and Sons},
+    address = {New York, USA}
+}
+
 @incollection{Gilks:1996vx,
     title = {{Strategies for improving MCMC}},
     author ={Gilks, W. and Roberts, G.},
