--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,8 @@ bib, bibintoc, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \author{Yan Zhou}
 \date{\today}
 
+\includeonly{chap/model-selection}
+
 \begin{document}
 
 \frontmatter
