update model selection

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,28 @@
+@book{Jaynes:1989vx,
+    title={Papers on Probability, Statistics, and Statistical Physics},
+    author={Jaynes, E.T.},
+    editor={Rosenkrantz, R.D.},
+    year={1989},
+    publisher={Kluwer Academic}
+}
+
+@book{Gelman:2003vx,
+    title={Bayesian Data Analysis},
+    author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Rubin, D.B.},
+    series={Chapman \& Hall/CRC Texts in Statistical Science},
+    year={2003},
+    publisher={Taylor \& Francis},
+    address = {New York, USA},
+    edition = {2}
+}
+
+@article{Fisher:1956vx,
+    title={Statistical Methods and Scientific Inference},
+    author={Fisher, Ronald A},
+    year={1956},
+    publisher={Hafner Publishing Co.}
+}
+
 @article{Fan:1992vx,
     author = {Fan, T. H. and Berger, J. O.},
     title = {Behavior of the posterior distribution and inferences for a
@@ -77,6 +102,7 @@
     pages={221--242},
     year={1997}
 }
+
 @article{Breiman:1996vx,
     author = {Leo Breiman},
     title = {{Heuristics of instability and stabilization in model selection.}},
