--- a/macros.tex
+++ b/macros.tex
@@ -137,6 +137,8 @@
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
 \newcolumntype{R}{>{\raggedleft\arraybackslash}X}
 
+\def\xth{\textsups{th}\xspace}
+
 \def\STATESKIP{\hskip.68cm}
 \def\data{\mathbfit{y}}
 \newcommand{\smc}[1][]{\textsc{smc}#1\xspace}
