finish model selection method

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,11 @@
+@book{Grunwald:2005vx,
+  title={Advances in Minimum Description Length: Theory and Applications},
+  author={Gr{\"u}nwald, P.D. and Myung, I.J. and Pitt, M.A.},
+  series={Neural information processing series},
+  year={2005},
+  publisher={Bradford Book}
+}
+
 @book{Jaynes:1989vx,
     title={Papers on Probability, Statistics, and Statistical Physics},
     author={Jaynes, E.T.},
