first complete draft

--- a/extra.bib
+++ b/extra.bib
@@ -1,9 +1,194 @@
+@ARTICLE{Zhou:2013vx,
+    author = {{Zhou}, Y. and {Johansen}, A.~M and {Aston}, J.~A.},
+    title = "{Towards Automatic Model Comparison: An Adaptive Sequential Monte Carlo Approach}",
+    journal = {ArXiv e-prints},
+    archivePrefix = "arXiv",
+    eprint = {1303.3123},
+    primaryClass = "stat.ME",
+    keywords = {Statistics - Methodology},
+    year = 2013,
+    month = mar,
+    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1303.3123Z},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{RLNomen,
+    Author = { Robert B Innis and Vincent J Cunningham and Jacques Delforge and
+        Masahiro Fujita and Roger N Gunn and James Holden and Sylvain Houle and
+            Sung-Cheng Huang and Masanori Ichise and Hidehiro Iida and Hiroshi
+            Ito and Yuichi Kimura and Robert A Koeppe and Gitte Moos Knudsen
+            and Juhani Knuuti and Adriaan A Lammertsma and Marc Laruelle and
+            Ralph Paul Maguire and Mark Mintun and Evan D Morris and Ramin
+            Parsey and Julie Price and Mark Slifstein and Vesna Sossi and
+            Tetsuya Suhara and John Votaw and Dean F Wong and Richard E
+            Carson},
+    Title = {Consensus nomenclature for in vivo imaging of reversibly binding
+        radioligands},
+    journal = {Journal of Cerebral Blood Flow and Metabolism},
+    volume  = 27,
+    pages = {1533--1539},
+    year = {2007}
+}
+
+@book{Anderson:1983wk,
+    address = {New York, USA},
+    author = {Anderson, David H.},
+    publisher = {Springer-Verlag},
+    series = {Lecture Notes in Biomathematics},
+    title = {Compartmental Modelling and Tracer Kinetics},
+    volume = {50},
+    year = {1983}
+}
+
+@article{Lammertsma96,
+    author = {Lammertsma, A. A. and Hume, S. P.},
+    title = {Simplified Reference Tissue Model for {PET} Receptor Studies},
+    journal = {Neuroimage},
+    volume = {4},
+    number = {3},
+    pages = {153-8},
+    year = {1996} 
+}
+
+@article{Kinahan1989,
+    author = {Kinahan, P.E. and Rogers, J.G.},
+    journal = {IEEE Transactions on Nuclear Science},
+    number = {1},
+    pages = {964--968},
+    title = {{Analytic 3D image reconstruction using all detected events}},
+    volume = {36},
+    year = {1989}
+}
+
+@incollection{Phelps2000,
+    author = {Phelps, Michael E.},
+    booktitle = {Proceedings of the National Academy of Sciences},
+    number = {16},
+    pages = {9226--9233},
+    title = {{Positron emission tomography provides molecular imaging of biological processes}},
+    volume = {97},
+    year = {2000}
+}
+
+@article{Lawson2011,
+    author = 	 {D. J. Lawson and G. Holtrop and H. Flint},
+    title = 	 {Bayesian analysis of non-linear differential equation models with application to a gut microbial ecosystem},
+    journal = 	 {Biometrical Journal},
+    year = 	 {2011},
+    volume =	 {53},
+    number =	 {4},
+    pages =	 {543--556}
+}
+
+@article{Gambhir2002,
+    author = {Sanjiv Sam Gambhir},
+    title = {Molecular imaging of cancer with positron emission tomography},
+    journal = {Nature Reviews Cancer},
+    volume = 2,
+    pages = {683--693},
+    year = 2002
+}
+
+@article{FrankleL2002,
+    title = {Neuroreceptor imaging in psychiatric disorders},
+    author = {Frankle, W. G. and Laruelle, M},
+    journal = {Annals of Nuclear Medicine},
+    year = 2002,
+    volume = 16,
+    pages = {437--46}
+}
+
+@book{Jacquez:1996gc,
+    Author = {Jacquez, John A.},
+    Edition = {3rd},
+    Publisher = {University of Michigan Press},
+    Title = {Compartmental Analysis in Biology and Medicine},
+    Year = {1996}
+}
+
+@article{Schmidt99,
+    Author = {Schmidt, K.},
+    Title = {Which linear compartmental systems can be analyzed by spectral analysis of {PET} output data summed over all compartments?},
+    Journal = {Journal of Cerebral Blood Flow \& Metabolism},
+    Volume = {19},
+    Number = {5},
+    Pages = {560-9},
+    Year = {1999}
+}
+
+@techreport{Whiteley:2013vx,
+    author      = {Nick Whiteley},
+    title       = {Stabability properties of some particle filters},
+    institution = {ArXiv},
+    year        = {2013},
+    type        = {Mathematics e-print},
+    number      = {1306.6779}
+}
+
+@techreport{Beskos:2013vx,
+    author      = {Alexandros Beskos and Ajay Jasra and Alexandre Thiery},
+    title       = {On the convergence of adaptive sequential {Monte Carlo} methods},
+    institution = {ArXiv},
+    year        = {2013},
+    type        = {Mathematics e-print},
+    number      = {1306.6462}
+}
+
+@article{Jun:2011vx,
+    title={Parallel resampling particle filter algorithm},
+    author={Jun, Bi and Fung, Yufai and Tinkin, Ho and Baohua, Mao},
+    journal={Journal of Computational Information Systems},
+    volume={7},
+    number={6},
+    pages={1838--1845},
+    year={2011}
+}
+
+@article{Whitley:1994vx,
+    year={1994},
+    journal={Statistics and Computing},
+    volume={4},
+    number={2},
+    title={A genetic algorithm tutorial},
+    author={Whitley, Darrell},
+    pages={65--85}
+}
+
+@article{Kitagawa:1996vx,
+    author = {Kitagawa, Genshiro},
+    title = {{Monte Carlo} filter and smoother for non-{Gaussian} nonlinear state space models},
+    journal = {Journal of Computational and Graphical Statistics},
+    volume = {5},
+    number = {1},
+    pages = {1--25},
+    year = {1996}
+}
+
+@incollection{Gelman:1995vx,
+    title={Efficient {Metropolis} jumping rules},
+    author={Gelman, A. and Roberts, G. and Gilks, W.},
+    booktitle={Bayesian Statistics 5},
+    year={1995},
+    pages={559--607},
+    publisher = {Oxford University Press}
+}
+
+@article{McCulloch:1991vx,
+    title = {A bayesian approach to testing the arbitrage pricing theory},
+    journal = {Journal of Econometrics},
+    volume = {49},
+    number = {1-2},
+    pages = {141--168},
+    year = {1991},
+    author = {Robert McCulloch and Peter E. Rossi}
+}
+
 @book{Grunwald:2005vx,
-  title={Advances in Minimum Description Length: Theory and Applications},
-  author={Gr{\"u}nwald, P.D. and Myung, I.J. and Pitt, M.A.},
-  series={Neural information processing series},
-  year={2005},
-  publisher={Bradford Book}
+    title={Advances in Minimum Description Length: Theory and Applications},
+    author={Gr{\"u}nwald, P.D. and Myung, I.J. and Pitt, M.A.},
+    series={Neural information processing series},
+    year={2005},
+    publisher={Bradford Book}
 }
 
 @book{Jaynes:1989vx,
@@ -283,7 +468,7 @@
     author = {A. Gelman and K. Shirley},
     title = {Inference from Simulations and Monitoring Convergence},
     booktitle = {Handbook of {Markov Chain Monte Carlo}},
-    crossref = {mcmc:tutorial:BGJM11},
+    crossref = {mcmchandbook},
     pages = {163--174}
 }
 
@@ -298,7 +483,15 @@
     year = {1995}
 }
 
-@Manual{rsmc,
+@manual{cuda,
+    title = {{CUDA C} Programming Language},
+    author = {NVidia},
+    year = {2013},
+    note = {Version~5.5},
+    url = {http://www.nvidia.com/object/cuda_home_new.html}
+}
+
+@manual{rsmc,
     title = {SMC: Sequential Monte Carlo (SMC) Algorithm},
     author = {Gopi Goswami},
     year = {2011},
@@ -415,7 +608,7 @@
 
 @article{Zhou2013,
     author    = {Y. Zhou and J. A. D. Aston and A. M. Johansen},
-    title     = {Bayesian codel comparison for compartmental codels with
+    title     = {Bayesian model comparison for compartmental models with
         applications in positron emission tomography},
     journal   = {Journal of Applied Statistics},
     year      = {2013},
