--- a/macros.tex
+++ b/macros.tex
@@ -32,6 +32,7 @@
 \UseAbbr{kl}
 \UseAbbr{mala}
 \UseAbbr{mcmc}
+\UseAbbr{mc}
 \UseAbbr{mdl}
 \UseAbbr{mh}
 \UseAbbr{mle}
@@ -48,6 +49,7 @@
 \UseAbbr{press}
 \UseAbbr{ps}
 \UseAbbr{rjmcmc}
+\UseAbbr{roi}
 \UseAbbr{rng}
 \UseAbbr{simd}
 \UseAbbr{sis}
