--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@ bib, bibintoc, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 
 \mainmatter
 \include{chap/introduction}
+\include{chap/pet}
 \include{chap/model-selection}
 \include{chap/monte-carlo}
 \include{chap/bayesian-smc}
