--- a/tab/gmm-prob.tex
+++ b/tab/gmm-prob.tex
@@ -1,6 +1,7 @@
 \begin{table}
-    \caption{Gaussian mixture model posterior model probability estimates
-      obtained via \smc[1] and \rjmcmc}
+    \caption[Gaussian mixture model posterior model probability estimates]
+    {Gaussian mixture model posterior model probability estimates obtained via
+      \smc[1] and \rjmcmc}
     \label{tab:gmm-prob}
     \begin{tabu}{X[2l]X[2l]X[1c]X[1c]X[1c]X[1c]X[1l]X[1c]X[1c]}
       \toprule
