--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -16,7 +16,9 @@
     & $-40.9\pm1.09$ & $-39.9\pm1.04$ & $-39.4\pm1.04$ & $-39.2\pm1.05$ \\
     \bottomrule
   \end{tabularx}\endgroup
-  \caption{Path sampling estimator of marginal likelihood of two components
+  \caption[\protect\pet compartmental model path sampling estimates bias
+  reduction]
+  {Path sampling estimator of marginal likelihood of two components
     \pet model. The estimator was approximated using samples from \smc[2]
     algorithm with 1,000 particles and 20 iterations, with different numerical
     integration strategies. Large sample result (see Table~\ref{tab:pet-py})
