--- a/tab/pet-bic.tex
+++ b/tab/pet-bic.tex
@@ -1,5 +1,6 @@
 \begin{table}
-  \caption{Frequencies of model selected by \bic (\%) for \pet compartmental
+  \caption[\protect\pet compartmental model selection using \protect\bic]
+  {Frequencies of model selected by \bic (\%) for \pet compartmental
     model for 2,000 data sets simulated from a three compartments model}
   \label{tab:pet bic}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
