--- a/tab/pet-py.tex
+++ b/tab/pet-py.tex
@@ -33,7 +33,8 @@
       \bottomrule
     \end{tabularx}
   \endgroup
-  \caption{Marginal likelihood estimates of two components \pet model. $T$:
+  \caption[\protect\pet compartmental model marginal likelihood estimates]
+  {Marginal likelihood estimates of two components \pet model. $T$:
     Number of distributions in \smc and number of iterations used for
     inference in \pmcmc. $N$: Number of particles in \smc and number chains in
     \pmcmc. The \pmcmc and \smc with $N = 192$ are completely $N$-way
