--- a/tab/pet-vague.tex
+++ b/tab/pet-vague.tex
@@ -1,5 +1,7 @@
 \begin{table}
-  \caption{Frequencies of model selected by Bayes factor using vague priors
+  \caption[\protect\pet compartmental model selection using the Bayes factor
+  (vague priors)]
+  {Frequencies of model selected by Bayes factor using vague priors
     (\%) for \pet compartmental model for 2,000 data sets simulated from a
     three compartments model}
   \label{tab:pet vague}
