--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -1,5 +1,6 @@
 \begin{table}
-  \caption{Gaussian mixture model Bayes factor estimates obtained via \smc[2],
+  \caption[Gaussian mixture model Bayes factor estimates]
+  {Gaussian mixture model Bayes factor estimates obtained via \smc[2],
     \smc[3], \ais and \pmcmc}
   \label{tab:gmm-pair}
   \begin{tabu}{X[1.2l]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]}
@@ -13,7 +14,7 @@
     $\log B_{4,5}$
     & $2.15$ & $2.15$ & $2.16$ & $2.21$ & $2.16$ & $2.17$ & $2.63$ \\
     \sd
-    & $0.25$ & $\Best0.22$ & $0.61$ & $0.62$ & $1.12$ & $1.10$ & $0.41$ \\
+    & $0.25$ & $\Best{0.22}$ & $0.61$ & $0.62$ & $1.12$ & $1.10$ & $0.41$ \\
     \bottomrule
   \end{tabu}
 \end{table}
