--- a/tab/pet-aic.tex
+++ b/tab/pet-aic.tex
@@ -1,5 +1,6 @@
 \begin{table}
-  \caption{Frequencies of model selected by \aicc (\%) for \pet compartmental
+  \caption[\protect\pet compartmental model selection using \protect \aicc]
+  {Frequencies of model selected by \aicc (\%) for \pet compartmental
     model for 2,000 data sets simulated from a three compartments model}
   \label{tab:pet aicc}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
