--- a/tab/pet-bf.tex
+++ b/tab/pet-bf.tex
@@ -33,7 +33,8 @@
       \bottomrule
     \end{tabularx}
   \endgroup
-  \caption{Bayes factor $B_{2,1}$ estimates of two components \pet model. $T$:
+  \caption[\protect\pet compartmental model Bayes factor estimates]
+  {Bayes factor $B_{2,1}$ estimates of two components \pet model. $T$:
     Number of distributions in \smc and number of iterations used for
     inference in \pmcmc. $N$: Number of particles in \smc and number chains in
     \pmcmc. The \pmcmc and \smc with $N = 192$ are completely $N$-way
