--- a/tab/pet-informative.tex
+++ b/tab/pet-informative.tex
@@ -1,5 +1,7 @@
 \begin{table}
-  \caption{Frequencies of model selected by Bayes factor using informative
+  \caption[\protect\pet compartmental model selection using the Bayes factor
+  (informative priors)]
+  {Frequencies of model selected by Bayes factor using informative
     priors (\%) for \pet compartmental model for 2,000 data sets simulated
     from a three compartments model}
   \label{tab:pet informative}
