--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,47 @@
+@article{Marinari:1992vs,
+    title={Simulated tempering: a new Monte Carlo scheme},
+    author={Marinari, Enzo and Parisi, Giorgio},
+    journal={EPL (Europhysics Letters)},
+    volume={19},
+    number={6},
+    pages={451--458},
+    year={1992},
+    publisher={IOP Publishing}
+}
+
+@article{Murray:2013vx,
+    author = {{Murray}, L.~M. and {Lee}, A. and {Jacob}, P.~E.},
+    title = {Rethinking resampling in the particle filter on graphics
+        processing units},
+    journal = {ArXiv e-prints},
+    eprint = {1301.4019},
+    year = 2013,
+    pages={1--9}
+}
+
+@article{Peter:2011vx,
+    year={2011},
+    journal={Methodology and Computing in Applied Probability},
+    volume={13},
+    number={3},
+    title={Optimal Scaling of Random Walk Metropolis Algorithms with
+        Non-Gaussian Proposals},
+    publisher={Springer US},
+    author={Neal, Peter and Roberts, Gareth},
+    pages={583--601}
+}
+
+@Article{Chris:2009vx,
+    Author = {Chris {Sherlock} and Gareth {Roberts}},
+    Title = {{Optimal scaling of the random walk Metropolis on elliptically
+        symmetric unimodal targets.}},
+    Journal = {{Bernoulli}},
+    Volume = {15},
+    Number = {3},
+    Pages = {774--798},
+    Year = {2009}
+}
+
 @ARTICLE{Zhou:2013vx,
     author = {{Zhou}, Y. and {Johansen}, A.~M and {Aston}, J.~A.},
     title = "{Towards Automatic Model Comparison: An Adaptive Sequential Monte Carlo Approach}",
