--- a/tab/pet-bf-accuracy.tex
+++ b/tab/pet-bf-accuracy.tex
@@ -10,8 +10,8 @@
     \cmidrule(lr){2-3}
     Schedule & Fixed & Adaptive \\
     \midrule
-    Quadratic & $1.6\pm0.27$ & $1.6\pm0.22$ \\
-    \cess     & $1.6\pm0.19$ & $1.6\pm0.15$ \\
+    Deterministic schedule ($\alpha_k(t/_k) = (t/T_k)^5$) & $1.6\pm0.27$ & $1.6\pm0.22$ \\
+    \cess-based adaptive schedule & $1.6\pm0.19$ & $1.6\pm0.15$ \\
     \bottomrule
   \end{tabularx}
 \end{table}
