--- a/tab/pet-bf-cost.tex
+++ b/tab/pet-bf-cost.tex
@@ -11,8 +11,8 @@
     \cmidrule(lr){2-3}
     Schedule & Fixed & Adaptive \\
     \midrule
-    Quadratic & $200$ & $182$ \\
-    \cess     & $175$ & $157$ \\
+    Deterministic schedule ($\alpha_k(t/T_k) = (t/T_k)^5$) & $200$ & $182$ \\
+    \cess-based adaptive schedule & $175$ & $157$ \\
     \bottomrule
   \end{tabularx}
 \end{table}
