--- a/thesis.bib
+++ b/thesis.bib
@@ -2228,7 +2228,7 @@ month = jan
 
 @book{Robert:2004tn,
 author = {Robert, Christian P. and Casella, George},
-title = {{\emph{Monte Carlo Statistical Methods}}},
+title = {{Monte Carlo Statistical Methods}},
 publisher = {Springer},
 year = {2004}
 }
