--- a/alg/gibbs_random.tex
+++ b/alg/gibbs_random.tex
@@ -9,7 +9,8 @@
     \FOR{$i = 1,\dots,p$}
       \STATE Draw
       $X_{k_i}^{t+1}\sim
-      \pi_{k_i}(x_{k_i}|x_{k_1},\dots,x_{k_{i-1}},x_{k_{i+1}},\dots,x_{k_p})$.
+      \pi_{k_i}(x_{k_i}^{t+1}|
+      x_{k_1}^{t+1},\dots,x_{k_{i-1}}^{t+1},x_{k_{i+1}}^t,\dots,x_{k_p}^t)$.
     \ENDFOR
     \STATE Set $t\leftarrow t+1$.
   \UNTIL{Sufficient many samples have been produced.}
