--- a/tab/pet-aic.tex
+++ b/tab/pet-aic.tex
@@ -1,7 +1,8 @@
 \begin{table}
-  \caption[\protect\pet compartmental model selection using \protect \aicc]
-  {Frequencies of model selected by \aicc (\%) for \pet compartmental
-    model for 2,000 data sets simulated from a three compartments model}
+  \caption[\protect\pet compartmental model selection using \protect\aicc]
+  {Frequencies of models selected by \aicc (\%) for the 2,000 \pet
+    compartmental model data sets simulated simulated from a
+    three-compartments model}
   \label{tab:pet aicc}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
