--- a/tab/pet-bic.tex
+++ b/tab/pet-bic.tex
@@ -1,7 +1,8 @@
 \begin{table}
   \caption[\protect\pet compartmental model selection using \protect\bic]
-  {Frequencies of model selected by \bic (\%) for \pet compartmental
-    model for 2,000 data sets simulated from a three compartments model}
+  {Frequencies of models selected by \bic (\%) for the 2,000 \pet
+    compartmental model data sets simulated simulated from a
+    three-compartments model}
   \label{tab:pet bic}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
