--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass[
-11pt, fontset=Minion, toclevel=3,
+11pt, fontset=Minion, toclevel=3, colorfullink=false,
 linespread=1.414, lines=30, oneside, onesideheader,
 bib, bibintoc, biblatexstyle=numeric,
 mintcode, minted=cache,
@@ -14,28 +14,36 @@ draftnote, showoverfull
 
 \begin{document}
 
-\frontmatter
-\maketitle
-\tableofcontents
-\listoftables
-\listoffigures
-\include{chap/acknowledges}
-\include{chap/declarations}
-\include{chap/abstract}
+\begingroup
+  \frontmatter
+  \maketitle
+  \tableofcontents
+  \listoftables
+  \listoffigures
+\endgroup
 
-\mainmatter
-\include{chap/introduction}
-\include{chap/pet}
-\include{chap/model-selection}
-\include{chap/monte-carlo}
-\include{chap/bayesian-smc}
-\include{chap/vsmc}
-\include{chap/conclusions}
+\begingroup
+  \mainmatter
+  \include{chap/acknowledges}
+  \include{chap/declarations}
+  \include{chap/abstract}
+  \include{chap/introduction}
+  \include{chap/pet}
+  \include{chap/model-selection}
+  \include{chap/monte-carlo}
+  \include{chap/bayesian-smc}
+  \include{chap/vsmc}
+  \include{chap/conclusions}
+\endgroup
 
-\printbibliography[heading=reference]
+\begingroup
+  \printbibliography[heading=reference]
+\endgroup
 
-\appendix
-\include{chap/appendix-bayesian-vsmc}
-\include{chap/appendix-vsmc}
+\begingroup
+  \appendix
+  \include{chap/appendix-bayesian-vsmc}
+  \include{chap/appendix-vsmc}
+\endgroup
 
 \end{document}
